--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 #root {
-  @apply min-h-screen max-w-screen-2xl;
+  @apply min-h-screen w-full max-w-screen-2xl;
 }
 body {
   margin: 0;
