--- a/src/index.css
+++ b/src/index.css
@@ -21,5 +21,5 @@ code {
 }
 
 input {
-  @apply border py-5 w-full border-pink-300 rounded outline-none indent-4;
+  @apply border py-5 w-full border-cyan-500 rounded outline-none indent-4;
 }
